Counters using OOP concepts

--- a/02-Counter/index.html
+++ b/02-Counter/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Counter</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- first counter-->
+    <div class="counter first">
+      <h2 class="heading">first counter</h2>
+      <span class="value">0</span>
+      <div class="btn-container">
+        <button class="decrement btn">decrement</button>
+        <button class="reset btn">reset</button>
+        <button class="increment btn">increment</button>
+      </div>
+    </div>
 
+    <!-- second counter-->
+    <div class="counter second">
+      <h2 class="heading">second counter</h2>
+      <span class="value">0</span>
+      <div class="btn-container">
+        <button class="decrement btn">decrement</button>
+        <button class="reset btn">reset</button>
+        <button class="increment btn">increment</button>
+      </div>
+    </div>
+
+    <script src="./app.js"></script>
+  </body>
+</html>
